--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,6 +16,9 @@
   --ifm-code-font-size: 95%;
   --ifm-link-color: #00b4d8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  .typecode {
+    display: none;
+  };
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -30,4 +33,7 @@
   --ifm-button-background-color: #023e8a;
   --ifm-footer-background-color: #023e8a;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  .typecode {
+    display: none;
+  };
 }
